Don't use java 9 stuff in java 8